--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Install dependencies
         run: npm install
-      - name Run unit tests
+      - name: Run unit tests
       - run: npm test
         env:
           SQLITE_DB_LOCATION: /tmp/todo.db
