--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -14,6 +14,6 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Run unit tests
-      - run: npm test
+        run: npm test
         env:
           SQLITE_DB_LOCATION: /tmp/todo.db
